HTML deliverable added

--- a/admin_groups.html
+++ b/admin_groups.html
@@ -4,22 +4,116 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="icon" href="favicon.ico" />
 </head>
 <body>
     <header>
-        <h1>P Tracker</h1>
+        <h1><img src="logo.png"> P Tracker</h1>
 
-        <hr />
+        <hr>
     </header>
     <main>
 
-        <h2>Group 1</h2>
+        <div id="summaries">
+            <h1>Summary</h1>
 
+            <div id="group1">
+                <h2>Group 1</h2>
+                <a href="manager_dashboard.html">View</a>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Order ID</td>
+                            <td>Product</td>
+                            <td>Progress</td>
+                            <td></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>safe#ab12</td>
+                            <td>Stainless Steel Safe</td>
+                            <td>On Track...</td>
+                        </tr>
+                        <tr>
+                            <td>chair#cd34</td>
+                            <td>Stainless Steel Chair :P</td>
+                            <td>Ahead of Track...</td>
+                        </tr>
+                        <tr>
+                            <td>plate#ef45</td>
+                            <td>Stainless Steel Plate</td>
+                            <td>Behind Track...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
 
-        <h2>Group 2</h2>
+            <div id="group2">
+                <h2>Group 2</h2>
+                <a href="manager_dashboard.html">View</a>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Order ID</td>
+                            <td>Product</td>
+                            <td>Progress</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>safe#ab12</td>
+                            <td>Stainless Steel Safe</td>
+                            <td>On Track...</td>
 
-
-        <h2>Group 3</h2>
+                        </tr>
+                        <tr>
+                            <td>chair#cd34</td>
+                            <td>Stainless Steel Chair :P</td>
+                            <td>Ahead of Track...</td>
+                        </tr>
+                        <tr>
+                            <td>plate#ef45</td>
+                            <td>Stainless Steel Plate</td>
+                            <td>Behind Track...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+            <div id="group3">
+                <h2>Group 3</h2>
+                <a href="manager_dashboard.html">View</a>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Order ID</td>
+                            <td>Product</td>
+                            <td>Progress</td>
+                            <td></td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>safe#ab12</td>
+                            <td>Stainless Steel Safe</td>
+                            <td>On Track...</td>
+                        </tr>
+                        <tr>
+                            <td>chair#cd34</td>
+                            <td>Stainless Steel Chair :P</td>
+                            <td>Ahead of Track...</td>
+                        </tr>
+                        <tr>
+                            <td>plate#ef45</td>
+                            <td>Stainless Steel Plate</td>
+                            <td>Behind Track...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
     </main>
     <footer>
@@ -28,6 +122,7 @@
         <nav>
             <menu>
                 <li><a href="https://github.com/Fiwafoofa/website">GitHub Page</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="index.html">Index</a></li>
                 <li><a href="employee.html">Employee</a></li>
                 <li><a href="manager_dashboard.html">Manager Dashboard</a></li>
