--- a/test.html
+++ b/test.html
@@ -2,7 +2,24 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+<!-- STICK TO ONE FONT FAMILY -->
+<!-- 
+
+
+  Monospace
+
+  Cabin
+  Signika Negative
+  
+  Maven Pro
+  Exo 2
+
+  3 OR LESS FONT STYLES
+ -->
 <style>
+  
 table {
   border-collapse: collapse;
   border-spacing: 0;
