--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" />
     <title>Login</title>
 </head>
 <body>
-    <header>
-        <h1>P Tracker</h1>
+    <header>    
+        <h1><img src="logo.png"> P Tracker</h1>
         <hr>
     </header>
     <main>
