Added missing About link in index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <nav>
             <menu>
                 <li><a href="https://github.com/Fiwafoofa/website">GitHub Page</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="index.html">Index</a></li>
                 <li><a href="employee.html">Employee</a></li>
                 <li><a href="manager_dashboard.html">Manager Dashboard</a></li>
