Fixed table sizing on Mobile

--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                     <p>
                         This product tracking application will allow organizations 
                         to digitally create products with information about production such as materials and 
-                        time of production, and it will gather data on the efficiency of production for better 
-                        optimization. With this 
+                        time of production. With this 
                         tool, companies will be able to be better organized and take the next step forward with 
                         their manufacturing.
                     </p>
@@ -79,7 +78,6 @@
                 </div>
             </div>
             
-            <p>Temporary for easy access</p>
             <a href="https://github.com/Fiwafoofa/website"> &bull; GitHub Page</a>
             <a href="index.html"> &bull; Login</a>
             <a href="employee.html"> &bull; Employee</a>
