--- a/index.html
+++ b/index.html
@@ -19,37 +19,44 @@
     <main>
         <div class="container login-register">
             <h2>Login</h2>
-            <form action="employee.html">
+            <!-- <form action="employee.html"> -->
                 
                 <div class="form-outline mb-4">
-                    <input type="email" id="email-input" class="form-control" />
-                    <label class="form-label" for="email-input">Email address</label>
+                    <input type="email" id="login-email-input" class="form-control" />
+                    <label class="form-label" for="login-email-input">Email address</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                    <input type="password" id="password-input" class="form-control" />
-                    <label class="form-label" for="password-input">Password</label>
+                    <input type="password" id="login-password-input" class="form-control" />
+                    <label class="form-label" for="login-password-input">Password</label>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>    
-            </form>
+                <button onclick="login()" type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>    
+            <!-- </form> -->
         </div>
 
         <div class="container login-register">
             <h2>Register</h2>
-            <form action="employee.html">
+            <!-- <form action="employee.html"> -->
                 
                 <div class="form-outline mb-4">
-                    <input type="email" id="email-input" class="form-control" />
-                    <label class="form-label" for="email-input">Email address</label>
+                    <input type="email" id="register-email-input" class="form-control" />
+                    <label class="form-label" for="register-email-input">Email address</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                    <input type="password" id="password-input" class="form-control" />
-                    <label class="form-label" for="password-input">Password</label>
+                    <input type="password" id="register-password-input" class="form-control" />
+                    <label class="form-label" for="register-password-input">Password</label>
                 </div>
-
-                <button type="submit" class="btn btn-primary btn-block mb-4">Register</button>    
-            </form>
+                <div class="form-check form-check-inline">
+                    <input id="registerRoleEmp" class="form-check-input" type="radio" name="inlineRadioOptions" value="Employee">
+                    <label class="form-check-label" for="registerRoleEmp">Employee</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input id="registerRoleMan" class="form-check-input" type="radio" name="inlineRadioOptions" value="Manager">
+                    <label class="form-check-label" for="registerRoleMan">Manager</label>
+                  </div>
+                <button onclick="register()" type="submit" class="btn btn-primary btn-block mb-4">Register</button>    
+            <!-- </form> -->
         </div>
 
 
@@ -71,7 +78,7 @@
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase" style="color:blue">Quote</h5>
 
-                    <p>
+                    <p id="quote">
                         “Computers are incredibly fast, accurate, and stupid. Human beings are incredibly slow, 
                         inaccurate, and brilliant. Together they are powerful beyond imagination.”- Albert Einstein
                     </p>
@@ -87,6 +94,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <script src="index.js"></script>
 </body>
 </html>
