--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -367,7 +367,7 @@
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="footer-header">Quote</h5>
 
-                    <p>
+                    <p id="quote">
                         “Computers are incredibly fast, accurate, and stupid. Human beings are incredibly slow, 
                         inaccurate, and brilliant. Together they are powerful beyond imagination.”- Albert Einstein
                     </p>
