--- a/public/employee.html
+++ b/public/employee.html
@@ -167,9 +167,8 @@
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 style="color:blue">Quote</h5>
 
-                    <p>
-                        “Computers are incredibly fast, accurate, and stupid. Human beings are incredibly slow, 
-                        inaccurate, and brilliant. Together they are powerful beyond imagination.”- Albert Einstein
+                    <p id="quote">
+                        
                     </p>
                 </div>
             </div>
