Added updating tasks

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -278,8 +278,8 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary">Start Task</button>
-                            <button type="button" class="btn btn-primary">End Task</button>
+                            <button type="button" class="btn btn-primary" onclick="startTask()">Start Task</button>
+                            <button type="button" class="btn btn-primary" onclick="endTask()">End Task</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                     </div>
