--- a/public/employee.html
+++ b/public/employee.html
@@ -78,8 +78,8 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary">Start Task</button>
-                            <button type="button" class="btn btn-primary">End Task</button>
+                            <button type="button" class="btn btn-primary" onclick="startTask()">Start Task</button>
+                            <button type="button" class="btn btn-primary" onclick="endTask()">End Task</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                     </div>
@@ -117,8 +117,6 @@
                 </table>
             </div>
         </div>
-
-
 
         <div id="historyTasks" class="container">
             <h2>History</h2>
