Added full login database logic

--- a/public/employee.html
+++ b/public/employee.html
@@ -16,6 +16,7 @@
             <h1 class="heading"><img src="logo.png" class="logo"> P Tracker</h1>
             
             <ul class="nav nav-pills nav-fill justify-content-end">
+                <li class="nav-item" style="color: white;" id="group-id"> Group ID: xxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
                 <li class="nav-item">
                     <a href="index.html" class="nav-link btn btn-outline-light justify-content-end">Logout</a>   
                 </li>
