--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -30,7 +30,7 @@
                 </li> -->
                 <li class="nav-item" style="color: white;" id="group-id"> Group ID: xxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link btn btn-outline-light justify-content-end">Logout</a>   
+                    <a href="index.html" class="nav-link btn btn-outline-light justify-content-end" onclick="logout()">Logout</a>   
                 </li>
             </ul>
         </nav>
