--- a/public/employee.html
+++ b/public/employee.html
@@ -18,7 +18,7 @@
             <ul class="nav nav-pills nav-fill justify-content-end">
                 <li class="nav-item" style="color: white;" id="group-id"> Group ID: xxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link btn btn-outline-light justify-content-end">Logout</a>   
+                    <a href="index.html" class="nav-link btn btn-outline-light justify-content-end" onclick="logout()">Logout</a>   
                 </li>
             </ul>
         </nav>
